[KF-371] No return any data when create a task waiting for termination